[workspace]
resolver = "2"
members = [
    "crates/runsible-core",
    "crates/runsible",
    "crates/runsible-playbook",
    "crates/runsible-galaxy",
    "crates/runsible-vault",
    "crates/runsible-inventory",
    "crates/runsible-doc",
    "crates/runsible-config",
    "crates/runsible-console",
    "crates/runsible-pull",
    "crates/runsible-lint",
    "crates/runsible-test",
    "crates/runsible-connection",
    "crates/yaml2toml",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "Unlicense"
repository = "https://github.com/mcochran/runsible"
authors = ["Cochran Block"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
toml_edit = "0.22"
serde_yaml = "0.9"
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
indexmap = { version = "2", features = ["serde"] }
globset = "0.4"
regex = "1"
age = { version = "0.10", features = ["armor"] }
base64 = "0.22"
runsible-core = { path = "crates/runsible-core", version = "0.0.1" }
runsible-inventory = { path = "crates/runsible-inventory", version = "0.0.1" }
runsible-playbook = { path = "crates/runsible-playbook", version = "0.0.1" }
runsible-connection = { path = "crates/runsible-connection", version = "0.0.1" }
runsible-vault = { path = "crates/runsible-vault", version = "0.0.1" }
semver = "1"
tar = "0.4"
flate2 = "1"
sha2 = "0.10"
hex = "0.4"
