[package]
name = "runsible-config"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "runsible-config: 1-for-1 Rust/TOML reimagining of the corresponding Ansible tool"

[[bin]]
name = "runsible-config"
path = "src/main.rs"
