[package]
name = "runsible-config"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "runsible-config: TOML-native configuration for runsible (replaces ansible-config)"

[lib]
name = "runsible_config"
path = "src/lib.rs"

[[bin]]
name = "runsible-config"
path = "src/main.rs"

[dependencies]
runsible-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
