[package]
name = "runsible-connection"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "runsible-connection: 1-for-1 Rust/TOML reimagining of the corresponding Ansible tool"

[lib]
name = "runsible_connection"
path = "src/lib.rs"

[[bin]]
name = "runsible-connection"
path = "src/main.rs"

[features]
tests = ["dep:exopack"]

[[bin]]
name = "runsible-connection-test"
path = "src/bin/runsible-connection-test.rs"
required-features = ["tests"]

[dependencies]
runsible-core = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
async-trait = "0.1"
exopack = { workspace = true, optional = true }
