[package]
name = "runsible-console"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "runsible-console: 1-for-1 Rust/TOML reimagining of the corresponding Ansible tool"

[[bin]]
name = "runsible-console"
path = "src/main.rs"
