[package]
name = "runsible-console"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "runsible-console: 1-for-1 Rust/TOML reimagining of the corresponding Ansible tool"

[features]
tests = ["dep:exopack", "dep:tokio"]

[lib]
name = "runsible_console"
path = "src/lib.rs"

[[bin]]
name = "runsible-console"
path = "src/main.rs"

[[bin]]
name = "runsible-console-test"
path = "src/bin/runsible-console-test.rs"
required-features = ["tests"]

[dependencies]
runsible-playbook = { workspace = true }
runsible-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
rustyline = { workspace = true }
colored = { workspace = true }
exopack = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
