[package]
name = "runsible-doc"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "runsible-doc: 1-for-1 Rust/TOML reimagining of the corresponding Ansible tool"

[features]
tests = ["dep:exopack", "dep:tokio"]

[lib]
name = "runsible_doc"
path = "src/lib.rs"

[[bin]]
name = "runsible-doc"
path = "src/main.rs"

[[bin]]
name = "runsible-doc-test"
path = "src/bin/runsible-doc-test.rs"
required-features = ["tests"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
indexmap = { workspace = true }
exopack = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
