[package]
name = "runsible-lint"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "runsible-lint: 1-for-1 Rust/TOML reimagining of the corresponding Ansible tool"

[[bin]]
name = "runsible-lint"
path = "src/main.rs"
