[package]
name = "runsible-playbook"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "runsible-playbook: TOML-native playbook engine for runsible"

[lib]
name = "runsible_playbook"
path = "src/lib.rs"

[[bin]]
name = "runsible-playbook"
path = "src/main.rs"

[features]
tests = ["dep:exopack"]

[[bin]]
name = "runsible-playbook-test"
path = "src/bin/runsible-playbook-test.rs"
required-features = ["tests"]

[dependencies]
runsible-core = { workspace = true }
runsible-inventory = { workspace = true }
runsible-connection = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
indexmap = { workspace = true }
minijinja = { workspace = true }
regex = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
globset = { workspace = true }
semver = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
exopack = { workspace = true, optional = true }
