[package]
name = "runsible-pull"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "runsible-pull: 1-for-1 Rust/TOML reimagining of the corresponding Ansible tool"

[features]
tests = ["dep:exopack"]

[lib]
name = "runsible_pull"
path = "src/lib.rs"

[[bin]]
name = "runsible-pull"
path = "src/main.rs"

[[bin]]
name = "runsible-pull-test"
path = "src/bin/runsible-pull-test.rs"
required-features = ["tests"]

[dependencies]
runsible-core = { workspace = true }
runsible-config = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
dirs = { workspace = true }
exopack = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
