[package]
name = "runsible-test"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "runsible-test: 1-for-1 Rust/TOML reimagining of the corresponding Ansible tool"

[features]
tests = ["dep:exopack", "dep:tokio"]

[lib]
name = "runsible_test"
path = "src/lib.rs"

[[bin]]
name = "runsible-test"
path = "src/main.rs"

[[bin]]
name = "runsible-test-test"
path = "src/bin/runsible-test-test.rs"
required-features = ["tests"]

[dependencies]
runsible-core = { workspace = true }
runsible-galaxy = { workspace = true }
runsible-lint = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
indexmap = { workspace = true }
exopack = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
