[package]
name = "runsible-vault"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "runsible-vault: 1-for-1 Rust/TOML reimagining of the corresponding Ansible tool"

[lib]
name = "runsible_vault"
path = "src/lib.rs"

[[bin]]
name = "runsible-vault"
path = "src/main.rs"

[dependencies]
runsible-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
age = { workspace = true }
base64 = { workspace = true }
indexmap = { workspace = true }

[dev-dependencies]
tempfile = "3"
