[package]
name = "runsible-vault"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "runsible-vault: 1-for-1 Rust/TOML reimagining of the corresponding Ansible tool"

[lib]
name = "runsible_vault"
path = "src/lib.rs"

[[bin]]
name = "runsible-vault"
path = "src/main.rs"

[features]
tests = ["dep:exopack", "dep:tokio"]

[[bin]]
name = "runsible-vault-test"
path = "src/bin/runsible-vault-test.rs"
required-features = ["tests"]

[dependencies]
runsible-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
age = { workspace = true }
base64 = { workspace = true }
indexmap = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
pbkdf2 = { workspace = true }
aes = { workspace = true }
ctr = { workspace = true }
hmac = { workspace = true }
exopack = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3"
