[package]
name = "runsible"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "runsible: 1-for-1 Rust/TOML reimagining of the corresponding Ansible tool"

[lib]
name = "runsible"
path = "src/lib.rs"

[[bin]]
name = "runsible"
path = "src/main.rs"

[features]
tests = ["dep:exopack", "dep:tokio"]

[[bin]]
name = "runsible-test"
path = "src/bin/runsible-test.rs"
required-features = ["tests"]

[dependencies]
runsible-playbook = { workspace = true }
runsible-inventory = { workspace = true }
runsible-connection = { workspace = true }
runsible-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
exopack = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
