[package]
name = "yaml2toml"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "yaml2toml: 1-for-1 Rust/TOML reimagining of the corresponding Ansible tool"

[lib]
name = "yaml2toml"
path = "src/lib.rs"

[[bin]]
name = "yaml2toml"
path = "src/main.rs"

[features]
tests = ["dep:exopack", "dep:tokio"]

[[bin]]
name = "yaml2toml-test"
path = "src/bin/yaml2toml-test.rs"
required-features = ["tests"]

[dependencies]
serde = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
exopack = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
